--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "bugs": "https://github.com/luscus/node-service-probe/issues",
     "main": "./lib/service-probe.js",
     "dependencies": {
-        "root-finder": "0.1.x",
-        "ip": "0.3.x"
+        "package.root": "0.2.0",
+        "ip": "0.3.2"
     },
     "devDependencies": {
-        "grunt": "0.4.x",
-        "grunt-contrib-jshint": "0.10.x",
-        "load-grunt-tasks": "0.4.x"
+      "grunt": "0.4.5",
+      "grunt-license-report": "0.0.8",
+      "grunt-contrib-jshint": "0.11.0",
+      "grunt-mocha-test": "0.12.7",
+      "load-grunt-tasks": "3.1.0",
+      "chai": "2.0.0",
+      "mocha": "2.1.0"
     },
     "licenses": [
         {
